# OS_labs_first-lab_bez_szhat

./: CMakeLists.txt  README.md  archivate.c  archivator.c  archivator.h  dearchivate.c
